--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <meta charset=utf8>
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 <link rel="stylesheet" href="main.css">
 <title>Wildberry Wood Outdoor Learning</title>
 <nav>
@@ -37,7 +38,9 @@
 </nav>
 <section>
     <div id=head-image>
-        <h2>Outdoor Learning for Everyone</h2>
+        <h2>Wildberry Wood Outdoor Learning</h2>
     </div>
-    <p>Wildberry Wood is something.</p>
+    <p>Wildberry Wood Outdoor Learning specialise in Forest School
+    experiences. Based in Orpington near Bromley, we can provide
+    Forest School sessions in South East London and North Kent.</p>
 </section>
