--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         </li>
     </ul>
 </nav>
-<section>
+<main>
     <div id=head-image>
         <h2>Wildberry Wood Outdoor Learning</h2>
     </div>
     <p>Wildberry Wood Outdoor Learning specialise in Forest School
     experiences. Based in Orpington near Bromley, we can provide
     Forest School sessions in South East London and North Kent.</p>
-</section>
+</main>
